[package]
name = "generic_levenshtein"
version = "0.1.0"
authors = ["Jerome M. Berger <jeberger@free.fr>"]
license = "MIT"
description = "Generic and fast implementation of the Levenshtein distance"
homepage = "https://bitbucket.org/jmb/rust_generic_levenshtein"
categories = [ "algorithms", "text-processing" ]
readme = "README.md"
edition = "2018"

[dev-dependencies]

# For benchmark comparisons:
levenshtein = "1.0.4"
strsim = "0.9.2"
distance = "0.4.0"
eddie = "0.3.2"
txtdist = "0.2.1"
