[package]
name = "weighted_levenshtein"
version = "0.2.0"
authors = ["Benjamin Levin <bplevin36@gmail.com>"]
license = "MIT"
description = "Generic, fast implementation of Levenshtein distance with features for weighting operations"
homepage = "https://github.com/bplevin36/weighted_levenshtein"
categories = [ "algorithms", "text-processing" ]
readme = "README.md"
edition = "2018"

[features]
default-weight = []