[package]
name = "weighted_levenshtein"
version = "0.2.0"
authors = ["Benjamin Levin <bplevin36@gmail.com>"]
license = "MIT"
description = "Generic implementation of Levenshtein distance allowing arbitrary weighting of operations"
homepage = "https://github.com/bplevin36/weighted_levenshtein"
repository = "https://github.com/bplevin36/weighted_levenshtein"
keywords = [ "levenshtein", "weighted" ]
categories = [ "algorithms", "text-processing" ]
readme = "README.md"
edition = "2018"

[features]
default-weight = []

[dev-dependencies]
unicode-segmentation = "1.3.0"
